fixed the notification menu going behind the course list when overlapping.

--- a/public/stylesheets/rqra/courseList.css
+++ b/public/stylesheets/rqra/courseList.css
@@ -6,6 +6,7 @@ div#courseList {
 	display: box;
 	box-orient: horizontal;
 	margin-bottom: 35px;
+	z-index: -100;
 }
 
 div.spacer {
