--- a/public/stylesheets/rqra/header.css
+++ b/public/stylesheets/rqra/header.css
@@ -1,4 +1,5 @@
 div#header {
+	position: relative;
 	display: -webkit-box;
 	-webkit-box-orient: horizontal;
 	display: -moz-box;
@@ -9,6 +10,7 @@ div#header {
 	padding-top: 10px;
 	padding-bottom: 0px;
 	border-bottom: 2px solid #1b88d0;
+	z-index: 100;
 }
 
 div#askQuestion {
