--- a/public/stylesheets/rqra/notificationMenu.css
+++ b/public/stylesheets/rqra/notificationMenu.css
@@ -1,5 +1,6 @@
 div#notificationMenu {
 	width: 300px;
+	background: white;
 }
 
 div#notificationArrow {
